--- a/aplicacao-live/views/elements/footer.ejs
+++ b/aplicacao-live/views/elements/footer.ejs
@@ -3,4 +3,4 @@
 
 
 
-<p class="text-center text-muted">&copy; Copyright 2020 The Awesome People</p>
+<p class="text-center text-muted">&copy; Miguel de Araujo da Silva</p>
