finished git add .!

--- a/aplicacao-live/views/coments.ejs
+++ b/aplicacao-live/views/coments.ejs
@@ -17,7 +17,7 @@
             height:14em;
             border: 1px solid black;
             width: 50%;
-            margin: 5% auto;
+            margin: 1% auto;
             text-align: center;
             background-color: rgb(240, 243, 195);
             border-radius: 2em;
@@ -25,17 +25,17 @@
         }
     </style>
 
-
+<h5 class="text-center mt-5">Comentários</h5>
 <ul id="caixa">
-    <h5>Comentários</h5>
+
     <% comentarios.slice(-100).forEach(function(comentario) { %>
-        <hr>
-        <li> Comentario:<%= comentario.comentario %></li>
-        <li> Data:<%= comentario.data_entrada %></li>
-        <li>Horario:<%= comentario.horario %></li>
-        <li>Nome:<%= comentario.nome %></li>
-        <li>Email:<%= comentario.email %></li>
-        <br>
+ 
+        <li> <b>Data:</b> <%= comentario.data_entrada %></li>
+        <li> <b>Horario:</b> <%= comentario.horario %></li>
+        <li> <b>Nome:</b> <%= comentario.nome %></li>
+        <li> <b>Email:</b>  <%= comentario.email %></li>
+        <li> <br> <b>Comentario:</b> <br> <%= comentario.comentario %></li>
+
         <hr>
         <% }); %>
 </ul>
