--- a/aplicacao-live/views/comentar.ejs
+++ b/aplicacao-live/views/comentar.ejs
@@ -9,52 +9,64 @@
 
   <%- include('elements/bootstrap'); %>
 
+    <style>
+      form {
+        background: rgba(128, 128, 128, 0.198);
+      }
+    </style>
 
 </head>
 
+<body>
+  <header>
+    <%- include('elements/head') %>
+  </header>
 
-<header>
-  <%- include('elements/head') %>
-</header>
 
-<form class="w-50 m-auto bg-secondary text-white text-center" method="get" action="/comentar">
+  <h2 class="text-center mt-5">Envie um Comentário</h2>
 
-  <div class="">
-    <label for="comentario">Comentario:</label>
-    <textarea style=" display: block; margin: auto; height: 10em; resize: none; width: 80%;" name="comentario" cols="40"  maxlength="250" size="250" type="text"  placeholder="coloque um comentario" id="comentario"></textarea>
+
+  <form class="w-50 m-auto text-dark text-center" method="get" action="/comentar">
+
+    <div class="mt-3">
+      <label for="comentario" style="margin-top: 2%;">Comentario:</label>
+      <textarea
+        style=" border: none; display: block; margin: auto; height: 10em; resize: none; width: 80%; border-radius: 1em;"
+        name="comentario" cols="40" maxlength="250" size="250" type="text" placeholder="coloque um comentario"
+        id="comentario"></textarea>
+    </div>
+
+
+    <button type="submit" class="btn btn-primary m-3" onclick="check()">Enviar</button>
+  </form>
+
+
+  <!-- coments -->
+  <div>
+    <%- include('coments') %>
   </div>
-
-
-  <button type="submit" class="btn btn-primary mt-3" onclick="check()">Enviar</button>
-</form>
-
-
-<!-- coments -->
-<div> 
-  <%- include('coments') %>
-</div>
 
 
 </body>
 
 
 <script>
-  var id= "<%- id %>"
+  var id = "<%- id %>"
 
-function check(){
-  window.location.reload();
-  var comentario=document.getElementById('comentario').value
+  function check() {
+    window.location.reload();
+    var comentario = document.getElementById('comentario').value
 
 
-  if(id==""){
-    alert("cadastra-se primeiro!")
-  }else if(comentario == ""){
-  alert("você deixou o campo comentário vazio!")
-}else{
-  alert("comentário salvo com sucesso!")
-  window.location.reload();
-}
-}
+    if (id == "") {
+      alert("cadastra-se primeiro!")
+    } else if (comentario == "") {
+      alert("você deixou o campo comentário vazio!")
+    } else {
+      alert("comentário salvo com sucesso!")
+      window.location.reload();
+    }
+  }
 
 </script>
 
@@ -65,4 +77,3 @@ function check(){
 
 
 </html>
-
