--- a/aplicacao-live/views/index.ejs
+++ b/aplicacao-live/views/index.ejs
@@ -2,65 +2,41 @@
 <html>
 
 <head>
-  <title>
-    <%- title %>
-  </title>
+    <title>
+        <%- title %>
+    </title>
 
 
-  <%- include('elements/bootstrap'); %>
-    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <%- include('elements/bootstrap'); %>
+
+        <style>
+            h2 {
+                background: rgba(128, 128, 128, 0.198);
+            }
+        </style>
 </head>
 
 <body>
 
-  <header>
-    <%- include('elements/head'); %>
-  </header>
+    <header>
+        <%- include('elements/head'); %>
+    </header>
+
+
+    <main style="margin-top:20%" class="text-center text-dark">
+        <h2>Olá, Bem Vindo ao meu Teste-Técnico da Live University</h2>
+    </main>
+
+
+    <%- include('elements/bootstrapscript') %>
+
+
+        <footer class="mt-5">
+            <%- include('elements/footer') %>
+        </footer>
 
 
 
-  <!-- cadastro de usuario -->
-  <form class="w-50 m-auto bg-secondary text-white text-center" method="get" action="/cadastrar">
-    <div class="">
-      <label for="email">Email</label>
-      <input type="email" id="email" placeholder="coloque seu email" name="email">
-    </div>
-    <div class="">
-      <label for="nome">Nome</label>
-      <input type="text" placeholder="coloque seu nome" id="nome" name="nome">
-    </div>
-
-    <button type="submit" class="btn btn-primary" onclick="check()">Cadastrar</button>
-  </form>
-
-
-  <%- include('elements/bootstrapscript') %>
-
-
-
-
-
-
-    <footer>
-      <%- include('elements/footer') %>
-    </footer>
-
-
-    <script>
-      function check() {
-        nome = document.getElementById('nome').value
-        email = document.getElementById('email').value
-
-        let reg = /^[\w.\+]+@\w+.\w{2,}(?:.\w{2})?$/;
-        if (nome == "" || email == "") {
-          alert("você deixou algum campo vazio!")
-        } else if (reg.test(email)) {
-          alert("Cadastrado com Sucesso!")
-        } else {
-          alert("Email inválido");
-        }
-      }
-    </script>
 </body>
 
 </html>
