--- a/aplicacao-live/views/coments.ejs
+++ b/aplicacao-live/views/coments.ejs
@@ -27,7 +27,7 @@
 
 <h5 class="text-center mt-5">Comentários</h5>
 <ul id="caixa">
-
+<!-- comentarios ate 100 na tela -->
     <% comentarios.slice(-100).forEach(function(comentario) { %>
  
         <li> <b>Data:</b> <%= comentario.data_entrada %></li>
