--- a/aplicacao-live/views/comentar.ejs
+++ b/aplicacao-live/views/comentar.ejs
@@ -26,7 +26,7 @@
   <h2 class="text-center mt-5">Envie um Comentário</h2>
 
 
-  <form class="w-50 m-auto text-dark text-center" method="get" action="/comentar">
+  <form class="w-50 m-auto text-dark text-center" method="post" action="/comentar">
 
     <div class="mt-3">
       <label for="comentario" style="margin-top: 2%;">Comentario:</label>
@@ -54,17 +54,22 @@
   var id = "<%- id %>"
 
   function check() {
-    window.location.reload();
+
     var comentario = document.getElementById('comentario').value
-
-
+  
+    // verifica se o usuario foi cadastro ou está logado
     if (id == "") {
+      window.location.href = "/cadastrar";
       alert("cadastra-se primeiro!")
+
     } else if (comentario == "") {
+      window.location.href = "/comentar";
       alert("você deixou o campo comentário vazio!")
+
     } else {
+      window.location.href = "/comentar";
       alert("comentário salvo com sucesso!")
-      window.location.reload();
+
     }
   }
 
